Fri Dec  3 16:42:24 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* tests/scripts/Makefile.am:
	* tests/scripts/waveloadtest.scm: Added a scheme script for checking
	whether files can be loaded by BSE.

Fri Dec  3 15:51:48 2004  Tim Janik  <timj@gtk.org>

	* shell/bsescminterp.c (bse_scm_choice_match): implement in terms
	of sfi_choice_match_detailed().

	* shell/bse-scm-glue.boot: implement bse-test-error with 
	bse-choice-match?.

Fri Dec  3 13:45:46 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/dialogs/radgets-standard.xml: support vruler and hruler types.

	* beast-gtk/gxk/gxkradget.c: register GtkHRuler and GtkVRuler types.

Tue Nov 30 21:45:54 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstscrollgraph.[hc]: support adjustment of scrolling
	direction, value boost and spectrum flipping. added parameter GUI
	creation code. resizing fixes. 

	* beast-gtk/dialogs/radgets-beast.xml: scrollgraph GUI changes.

	* beast-gtk/gxk/gxkparam.[hc]: support GObject property parameters.

	* beast-gtk/bstutils.[hc]: added support for gmasks spanning multiple
	gmask columns. added bst_object_class_install_property().

	* beast-gtk/bstparam.[hc]: support param gmask creations in specific
	columns. wrap provide size-grouped object param constructor.

	* beast-gtk/bstsnetrouter.c: use new GUI creation code for scrollgraphs.

Mon Nov 29 20:55:07 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstbuseditor.c:
	bus_probes_notify(): plugged memory leak.

	* beast-gtk/bstscrollgraph.c: first start at size requisition.
	altered default display. create an extra window to allow proper
	scrolling behaviour. display frequencies in deci bell.
	added frequency shading via GxkColorDots. removed weighting by
	1/n which is done by BSE now. plugged mem leak.
	fixed off-by-one error in reverse coord loookup.

	* beast-gtk/gxk/gxkutils.[hc]: added GxkColorDots which implements
	a linear color interpolator.

Sat Nov 27 18:37:46 2004  Tim Janik  <timj@gtk.org>
